# pkg/model/cached_rate.go
@@ -2,7 +2,7 @@ package model
 
 import "time"
 
-type CachedRate struct {
-	Rate      Rate      `bson:"rate"`
-	CreatedAt time.Time `bson:"created_at"`
+type CachedRates struct {
+	Rates     map[string]Rate `bson:"rates"`
+	CreatedAt time.Time       `bson:"created_at"`
 }
